# agenomic

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/agenomic-fingerprint/: Cargo.toml  README.md
crates/agenomic-fingerprint/src/: calibration.rs  cusum.rs  distance.rs  error.rs  estimation.rs  fingerprint.rs  lib.rs  schema.rs
crates/agenomic-fingerprint/tests/: test_cbor_canonical.rs  test_cusum.rs  test_estimation.rs  test_hoeffding.rs  test_mahalanobis.rs  test_signature.rs
crates/agenomic-metrics/: Cargo.toml  README.md
crates/agenomic-metrics/src/: divergence.rs  error.rs  lib.rs  metrics.rs  report.rs  stats.rs  thresholds.rs  trace.rs
crates/agenomic-metrics/tests/: proptest_invariants.rs
crates/agentlock-fingerprint/: Cargo.toml  README.md
crates/agentlock-fingerprint/src/: calibration.rs  cusum.rs  distance.rs  error.rs  estimation.rs  fingerprint.rs  lib.rs  schema.rs
crates/agentlock-fingerprint/tests/: test_cbor_canonical.rs  test_cusum.rs  test_estimation.rs  test_hoeffding.rs  test_mahalanobis.rs  test_signature.rs
docs/superpowers/plans/: 2026-05-07-user-first-auth-resend.md  2026-05-15-personal-workspace.md  2026-05-15-sidebar-hierarchy.md  2026-05-22-codedrift-agent.md
docs/superpowers/specs/: 2026-05-22-codedrift-agent-design.md
scripts/: rename-agentlock-to-agenomic.sh
scripts/placeholders/: .gitignore  README.md  publish-npm.sh  publish-pypi.sh
scripts/placeholders/npm/agenomic/: README.md  index.js  package.json
scripts/placeholders/npm/agenomic-cli/: README.md  index.js  package.json
scripts/placeholders/npm/agenomic-sdk/: README.md  index.js  package.json
scripts/placeholders/npm/agenomic-typescript/: README.md  index.js  package.json
scripts/placeholders/pypi/agenomic/: README.md  pyproject.toml
scripts/placeholders/pypi/agenomic-cli/: README.md  pyproject.toml
scripts/placeholders/pypi/agenomic-python/: README.md  pyproject.toml
scripts/placeholders/pypi/agenomic-python/src/agenomic_python/: __init__.py
scripts/placeholders/pypi/agenomic-sdk/: README.md  pyproject.toml
skills/: README.md
skills/self-graft-and-evaluate/: SKILL.md  manifest.yaml
skills/self-graft-and-evaluate/recipes/: python.md  rust.md  typescript.md
skills/self-graft-and-evaluate/scripts/: self-evaluate.sh  self-graft.sh
skills/self-graft-and-evaluate/templates/: behavior.contract.yaml  genome.yaml  replay_manifest.yaml  system.yaml  workflow.yaml
