[package]
name = "agentlock-fingerprint"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Behavioral fingerprints for AgentLock: empirical estimation, Mahalanobis identity tests, sample-size calibration, and CUSUM drift detection."
repository = "https://github.com/treansai/agentlock"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
ciborium = "0.2"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
statrs = "0.16"
blake3 = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
approx = "0.5"
rand = "0.8"
rand_distr = "0.4"
serde_json = "1"
