[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agenomic-sdk"
version = "0.0.1"
description = "Reserved namespace for the Agenomic project (https://github.com/treansai/agenomic). The real package will be published here in a future release."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Agenomic" }]
keywords = ["agenomic", "placeholder"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/treansai/agenomic"
Repository = "https://github.com/treansai/agenomic"

[tool.hatch.build.targets.wheel]
packages = ["src/agenomic_sdk"]
